timeline/src/App.css
.App {
  text-align: center;
  align-items: center;
  justify-content: center;
  display: table;
  width: 100%;
  height: 100%;
  padding-top: 1px;
  margin-top: -1px;
  overflow: auto;
}
.toggle {
  position: relative;
  padding: 0 4px;
  display: flex;
  align-items: center;
}

/* ARROW 1 */

.scroll-down {
  position: absolute;
  left: 50%;
  bottom: 90px;
  display: block;
  text-align: center;
  font-size: 50px;
  z-index: 100;
  text-decoration: none;
  text-shadow: 0;
  width: 33px;
  height: 33px;
  border-bottom: 2px solid #fff;
  border-right: 2px solid #fff;
  z-index: 9;
  left: 50%;
  cursor: pointer;
  -webkit-transform: translate(-50%, 0%) rotate(45deg);
  -moz-transform: translate(-50%, 0%) rotate(45deg);
  transform: translate(-50%, 0%) rotate(45deg);
  -webkit-animation: fade_move_down 4s ease-in-out infinite;
  -moz-animation: fade_move_down 4s ease-in-out infinite;
  animation: fade_move_down 4s ease-in-out infinite;
}
.search-bar {
  z-index: 9999;
}

.react-jinke-music-player .music-player-controller {
  background-color: white !important;
  border: grey !important;
}
.react-jinke-music-player .music-player-controller:hover {
  color: black !important;
  background-color: black !important;
  border: grey !important;
}
.react-jinke-music-player
  .music-player-controller
  .music-player-controller-setting:hover {
  color: white !important;
  background-color: black !important;
}
.react-jinke-music-player
  .music-player-controller
  .music-player-controller-setting {
  background: black !important;
  color: white !important;
}
.progess-bar {
  background-color: transparent !important;
  color: black;
}
.group {
  color: white;
}
.audio-lists-panel-content .audio-item .player-name {
  color: black !important;
}
.react-jinke-music-player-main.light-theme .player-time {
  color: black !important;
}
.audio-lists-panel-content .audio-item .player-delete {
  color: black !important;
}
.react-jinke-music-player-play-icon {
  color: black !important;
}
.react-jinke-music-player-main.light-theme .audio-item.playing svg {
  color: black !important;
}
.react-jinke-music-player-main.light-theme svg {
  color: black;
}
.react-jinke-music-player-main.light-theme svg:hover {
  color: goldenrod;
}
.react-jinke-music-player-main
  .music-player-panel
  .panel-content
  .progress-bar-content
  .audio-title {
  color: black;
}
.react-jinke-music-player-main
  .music-player-panel
  .panel-content
  .progress-bar-content
  .audio-main {
  color: black;
}
.react-jinke-music-player-main.light-theme button.rc-switch-checked {
  background-color: black !important;
  border: black;
}
.react-jinke-music-player-main
  .music-player-panel
  .panel-content
  .progress-bar-content
  .progress-bar
  .rc-slider-track {
  background-color: black;
}
.react-jinke-music-player-main
  .music-player-panel
  .panel-content
  .progress-bar-content
  .progress-bar {
  background-color: transparent !important;
}
.rc-slider-track {
  background-color: goldenrod;
}
.rc-slider-handle {
  background-color: black !important;
}
.rc-slider-handle:hover {
  background-color: goldenrod !important;
}
.rc-slider-step {
  background-color: black !important;
}

.react-jinke-music-player-main.dark-theme svg {
  color: white;
}

.react-jinke-music-player-main.dark-theme
  .music-player-panel
  .panel-content
  .progress-bar-content
  .progress-bar
  .rc-slider-track {
  background-color: goldenrod;
}
.react-jinke-music-player-main
  .dark-theme
  .music-player-panel
  .panel-content
  .progress-bar-content
  .audio-title {
  color: white;
}

/*animated scroll arrow animation*/
@-webkit-keyframes fade_move_down {
  0% {
    -webkit-transform: translate(0, -10px) rotate(45deg);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    -webkit-transform: translate(0, 10px) rotate(45deg);
    opacity: 0;
  }
}
@-moz-keyframes fade_move_down {
  0% {
    -moz-transform: translate(0, -10px) rotate(45deg);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    -moz-transform: translate(0, 10px) rotate(45deg);
    opacity: 0;
  }
}
@keyframes fade_move_down {
  0% {
    transform: translate(0, -10px) rotate(45deg);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    transform: translate(0, 10px) rotate(45deg);
    opacity: 0;
  }
}

/*animated scroll arrow animation*/
@-webkit-keyframes fade_move_down {
  0% {
    -webkit-transform: translate(0, -10px) rotate(45deg);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    -webkit-transform: translate(0, 10px) rotate(45deg);
    opacity: 0;
  }
}
@-moz-keyframes fade_move_down {
  0% {
    -moz-transform: translate(0, -10px) rotate(45deg);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    -moz-transform: translate(0, 10px) rotate(45deg);
    opacity: 0;
  }
}
@keyframes fade_move_down {
  0% {
    transform: translate(0, -10px) rotate(45deg);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    transform: translate(0, 10px) rotate(45deg);
    opacity: 0;
  }
}

/* ARROW 2 */

.arrow-container {
  width: 100px;
  height: 100px;
  margin: 0 auto;
  position: absolute;
  bottom: 25px;
  left: 0;
  right: 0;
}

.arrow-1 {
  width: 100px;
  height: 100px;
  background: #00bcd4;
  opacity: 0.5;
  border-radius: 50%;
  position: absolute;
}

.arrow-2 {
  width: 60px;
  height: 60px;
  background: #fff;
  border-radius: 50%;
  position: absolute;
  top: 20px;
  left: 20px;
  z-index: 1;
  display: table;
}

.arrow-2:before {
  width: 52px;
  height: 52px;
  content: "";
  border: 2px solid #006064;
  border-radius: 50%;
  position: absolute;
  top: 2px;
  left: 2px;
}

.arrow-2 i.fa {
  font-size: 30px;
  display: table-cell;
  vertical-align: middle;
  text-align: center;
  color: #006064;
}

/* Custom Animate.css */

.animated.hinge {
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
}
/* ... */

